[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/IMGs/player_sprite_atlas.png" type="Texture" id=2]
[ext_resource path="res://Assets/Particles/wall_slide_dust.png" type="Texture" id=3]
[ext_resource path="res://Scripts/PlayerFSM.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 25.2781
height = 21.6279

[sub_resource type="Animation" id=2]
resource_name = "Dash"
length = 0.01
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 20 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 15 ]
}

[sub_resource type="Animation" id=4]
length = 1.8
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2, 1.5, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.06
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 14, 12 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7, 9, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.01
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.01 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 28, 28 ]
}

[sub_resource type="CanvasItemMaterial" id=8]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.376244, 4.2758 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Dash = SubResource( 2 )
anims/Float = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Jump = SubResource( 5 )
anims/Run = SubResource( 6 )
anims/Slide = SubResource( 7 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )
vframes = 5
hframes = 6

[node name="Slide_Particle" type="CPUParticles2D" parent="Body"]
material = SubResource( 8 )
position = Vector2( -27, 13 )
rotation = -3.14159
scale = Vector2( 0.25, 0.25 )
emitting = false
amount = 3
lifetime = 2.0
preprocess = 3.0
speed_scale = 2.1
fixed_fps = 60
texture = ExtResource( 3 )
anim_speed = 0.4

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
position = Vector2( 23, 39 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
position = Vector2( 0, 39 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="RayCast2D3" type="RayCast2D" parent="RayCasts"]
position = Vector2( -23, 39 )
enabled = true
cast_to = Vector2( 0, 16 )

[node name="FSM" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="WallRayCasts" type="Node2D" parent="."]

[node name="Right_Wall_RayCasts" type="Node2D" parent="WallRayCasts"]

[node name="RayCast2D2" type="RayCast2D" parent="WallRayCasts/Right_Wall_RayCasts"]
position = Vector2( 26, 12 )
enabled = true
cast_to = Vector2( 5, 0 )

[node name="Left_Wall_RayCasts" type="Node2D" parent="WallRayCasts"]
position = Vector2( 0, -20 )

[node name="RayCast2D2" type="RayCast2D" parent="WallRayCasts/Left_Wall_RayCasts"]
position = Vector2( -25, 32 )
enabled = true
cast_to = Vector2( -5, 0 )

[node name="WallSlideCooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallSlideStickyTimer" type="Timer" parent="."]
wait_time = 0.01
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -94.0
margin_top = -68.0
margin_bottom = -54.0
rect_min_size = Vector2( 94, 14 )
rect_scale = Vector2( 2, 2 )
align = 1
valign = 1
[connection signal="timeout" from="WallSlideStickyTimer" to="FSM" method="_on_WallSlideStickyTimer_timeout"]
